Make order idempotency durable across Redis failures.
Store request keys transactionally in MySQL and roll back paid-order state when inventory updates are incomplete.